--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "jimi",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.4.0",
     "electron": "^24.2.0",
     "jquery": "^3.6.4",
     "os": "^0.1.2",
