--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@babel/preset-env": "^7.21.5",
     "@babel/preset-react": "^7.18.6",
     "babel-loader": "^9.1.2",
+    "babel-plugin-preval": "^5.1.0",
     "css-loader": "^6.7.3",
     "electron-reload": "^2.0.0-alpha.1",
     "sass": "^1.62.1",
